project/manifests-linkerd/02-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: project-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/todos
        pathType: Prefix
        backend:
          serviceName: project-svc
          servicePort: 3030
      - path: /api/static
        pathType: Prefix
        backend:
          serviceName: project-svc
          servicePort: 3030    
      - path: /static
        pathType: Prefix
        backend:
          serviceName: project-svc
          servicePort: 8080    
      - path: /
        pathType: Prefix
        backend:
          serviceName: project-svc
          servicePort: 8080
